Fixed TaskBar Scrolling, Hidden Scrollbars

--- a/src/global.scss
+++ b/src/global.scss
@@ -41,6 +41,15 @@ body,
     animation-duration: 4s;
     animation-iteration-count: infinite;
 }
+.hide-scroll-bar {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+    &::-webkit-scrollbar {
+        width: 0px;
+        height: 0px;
+        background: transparent; /* Chrome/Safari/Webkit */
+    }
+}
 
 .wordpress-content {
     img {
